kubernetes/deployment/deployment.template.yaml
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: webapp
          image: iad.ocir.io/gse00014528/axisdemo/wercker-demo-app:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
            name: http
          livenessProbe:
            httpGet:
              path: /cities.json
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /cities.json
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
      imagePullSecrets:
        - name: ocir-secret
